--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "fontsource-roboto": "^3.0.3",
     "next": "^10.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
